create reset & regenerate button

--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
        
     </div>
 
+    <div class="btnGroup">
     <button id="generateBtn">產生密碼</button>
+    <button id="regenerateBtn">重新生成</button>
+    <button id="resetBtn">重新設定</button>
+    </div>
+   
 
-    <br><br>
-
+    <div class="result">
     <input type="text" id="password" readonly>
+    </div>
 
     <script src="main.JS"></script>
 </body>
