add copy function and add styles

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <div class="result">
     <input type="text" id="password" readonly>
+    <button id="copyBtn">複製密碼</button>
     </div>
 
     <script src="main.JS"></script>
